# DuoSynco

./: .cspell.json  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  FILE_RENAMING_LOG.md  Makefile  README.md  ali_wrapper  bootstrap.sh  claude  flow.md  lint.sh  mypy.ini  pyproject.toml  requirements.txt  test.sh  test_runner.py
.github/workflows/: ci.yml
ali/: __init__.py  cli.py  commands.py  config.py  converter.py
docs/: ELEVENLABS_V3_RESEARCH.md  EXECUTION_PATHS.md  RESEARCH.md
pretrained_models/sepformer-wham/: decoder.ckpt  encoder.ckpt  hyperparams.yaml  masknet.ckpt
sample_data/: .gitkeep  README.md  enhanced_transcript.json  sample_transcript.json  sample_transcript_clean.json  test_transcript.json
scripts/: run.sh  split_audio.sh
src/: __init__.py  main.py
src/ai/: __init__.py
src/audio/: __init__.py  audio_diarization.py  audio_stt.py  audio_tts.py  diarization.py  ffmpeg_separator.py  isolator.py  ml_separator.py  processor.py  stt.py  tts.py  tts_generator.py  voice.py  voice_config.py  whisperx_diarizer.py
src/cli/: __init__.py  claude.py
src/content/: __init__.py  base.py
src/mcp/: __init__.py  server.py
src/pipelines/: __init__.py
src/text/: __init__.py  editor.py  replacer.py  text_replacer.py
src/utils/: __init__.py  config.py  env.py  file_handler.py  files.py  manager.py  util_env.py
tests/: __init__.py  conftest.py  test_config.py  test_files.py  test_files_simple.py  test_main.py  test_provider_factory.py  test_provider_factory_simple.py  test_text_editor.py  test_util_env.py
(+66 files in other folders)
